// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders correctly with external 1`] = `
<a
  href="https://www.google.com"
  to="https://www.google.com"
>
  <div />
</a>
`;

exports[`Link renders correctly with internal 1`] = `
<a
  href="/home"
  onClick={[Function]}
>
  <div />
</a>
`;
